--- a/public/index.css
+++ b/public/index.css
@@ -1,16 +1,16 @@
-body {
-  font-family: sans-serif;
+* {
+  font-family: 'Nunito', sans-serif;
 }
 
 a {
   text-decoration: none;
 }
 
-label {
+/* label {
   display: block;
-}
+} */
 
-nav a {
+/* nav a {
   display: inline-block;
   margin: 1em;
 }
@@ -18,4 +18,4 @@ nav a {
 form div {
   margin: 1em;
   display: inline-block;
-}
+} */
